syntax = "proto3";

message UserProfile {
  string user = 1;
  string nickname = 2;
  string head = 3;
  string agender = 4;
  int64 birthday = 5;
  string address = 6;
  string signature = 7;
  string disease = 8;
  string role = 9;
  int64 enrolltime = 10;
  int64 start_time = 11;             // 开始患病时间
}

message StripUserProfile {
  string user = 1;                    // 用户帐号
  string nickname = 2;                // 昵称
  string head = 3;                    // 头像
  string signature = 4;               // 头像
}

